docs(deploy): tighten DEPLOYMENT.md + bench README, consolidate grid script
Cleanup pass after the grid-v2 run:

  - Delete grid-search.sh (v1, 186 LOC, superseded). Rename
    grid-search-v2.sh -> grid-search.sh as the single tuning sweep.
  - Add `export LC_ALL=C` so the auto-generated summary table no longer
    comma-truncates decimals (`12,00` -> `12.59`).
  - DEPLOYMENT.md: 268 -> 151 lines. Drop the redundant in-doc grid
    tables (the bench writes them to disk; cite path only), merge
    bare-metal and K8s into two compact recipes, keep the per-request
    knobs and sizing heuristic tables, trim the caveats.
  - misc/bench/README.md: 147 -> 89 lines. Drop the duplicated
    findings section (lives in DEPLOYMENT.md), collapse the Apple
    Silicon paragraph into one sentence, condense the usage examples.

No code or behaviour changes beyond the locale fix.